k8s/overlays/feature/delete-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
$patch: delete
