k8s/overlays/feature/delete-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartmeeting-ingress
$patch: delete
